pantalla reporte de grupos

--- a/src/app/inicio-administrador/inicio-administrador.page.html
+++ b/src/app/inicio-administrador/inicio-administrador.page.html
@@ -49,5 +49,13 @@
         </div>
       </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col class="container-options-inicio desenfoque" (click)="irReporteGrupos()">
+        <div class="contenido-options-inicio">
+          <img class="img-options-inicio" src="assets/img/stadistics.png">
+          <p class="text-grid-inicio">Reporte de grupos </p>
+        </div>
+      </ion-col>
+    </ion-row>
   </ion-grid>
 </ion-content>
