--- a/src/app/list-users/list-users.page.html
+++ b/src/app/list-users/list-users.page.html
@@ -11,12 +11,15 @@
 </ion-header>
 
 
-<ion-header *ngIf="!isCargando">
-  <ion-searchbar class="ion-no-margin ion-no-padding searchbar" placeholder="Buscar..." [(ngModel)]="filterTerm"
-                 animated="true"></ion-searchbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
+
+<ion-content [fullscreen]="true" class="bg-image no-scroll">
+  <ion-row *ngIf="!isCargando">
+    <ion-col [size]="12">
+      <ion-searchbar class="text-white ion-no-margin ion-no-padding searchbar" placeholder="Buscar usuario..." [(ngModel)]="filterTerm"
+                     animated="true"></ion-searchbar>
+    </ion-col>
+  </ion-row>
   <ion-row>
     <ion-col [size]="12" *ngIf="isCargando">
       <app-animation-progress></app-animation-progress>
@@ -29,41 +32,28 @@
     </ion-col>
   </ion-row>
 
-  <ion-row *ngIf="!isCargando">
-    <ion-col [size]="12">
-      <ion-list>
-        <ion-row class="header-table-row">
-          <ion-col [size]="4">
-            <h4 class="text-header-table ion-no-margin">Nombre</h4>
-          </ion-col>
-          <ion-col [size]="4">
-            <h4 class="text-header-table ion-no-margin">Email</h4>
-          </ion-col>
-          <ion-col [size]="4">
-            <h4 class="text-header-table ion-no-margin">Acciones</h4>
-          </ion-col>
-        </ion-row>
-        
+  <ion-row *ngIf="!isCargando" >
+    <ion-col [size]="12" class="desenfoque">
+      <ion-list style="background-color: transparent">
           <ion-row *ngFor="let user of listUsers | filter:filterTerm" class="row-list">
-              <ion-row *ngIf="user.admin == 0 || user.admin =='0'">
+            <ion-item class="ion-no-margin ion-no-padding" *ngIf="user.admin == 0 || user.admin =='0'">
                 <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="3">
-                  <ion-label class="text-competencias">{{user.name}}</ion-label>
+                  <p class="text-white text-competencias">{{user.name}}</p>
                 </ion-col>
-                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="5">
-                  <ion-label class="text-competencias">{{user.email}}</ion-label>
+                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="6">
+                  <p class="text-white text-competencias">{{user.email}}</p>
                 </ion-col>
-                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="2">
-                  <ion-button style="text-align: center" (click)="editarUser(user)">
-                    <ion-icon name="create-outline"></ion-icon>
+                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="1.5">
+                  <ion-button color="warning" size="medium" fill="clear" (click)="editarUser(user)">
+                    <ion-icon name="pencil"></ion-icon>
                   </ion-button>
                 </ion-col>
-                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="2">
-                  <ion-button style="text-align: center" (click)="borrarUser(user)">
-                    <img class="icon-delete" src='assets/icon/delete.png'>
+                <ion-col class='col-grid ion-no-margin ion-no-padding' [size]="1.5">
+                  <ion-button  color="danger" size="medium" fill="clear" (click)="borrarUser(user)">
+                    <ion-icon name="trash"></ion-icon>
                   </ion-button>
                 </ion-col>
-              </ion-row>
-              
+            </ion-item>
           </ion-row>
       </ion-list>
     </ion-col>
