--- a/src/app/logueo/logueo.page.html
+++ b/src/app/logueo/logueo.page.html
@@ -48,13 +48,14 @@
                 <ion-input class="text-white form-control text-input" formControlName="password"
                            placeholder="*****" [type]="passwordVisible ? 'text' : 'password'" required
                            (input)="onPasswordInput()"></ion-input>
-                <ion-icon *ngIf="passwordHasError('required')" name="close-circle" color="danger"></ion-icon>
-                <ion-icon *ngIf="passwordHasError('invalidPassword')" name="close-circle" color="danger"></ion-icon>
-                <ion-icon *ngIf="passwordIsValid()" name="checkmark-circle" color="tertiary"></ion-icon>
                 <ion-icon name="eye" slot="end" color="light" *ngIf="!passwordVisible"
                           (click)="passwordVisible = true"></ion-icon>
                 <ion-icon name="eye-off" slot="end" color="light" *ngIf="passwordVisible"
                           (click)="passwordVisible = false"></ion-icon>
+                <ion-icon slot="end" *ngIf="passwordHasError('required')" name="close-circle" color="danger"></ion-icon>
+                <ion-icon slot="end"  *ngIf="passwordHasError('invalidPassword')" name="close-circle" color="danger"></ion-icon>
+                <ion-icon slot="end"  *ngIf="passwordIsValid()" name="checkmark-circle" color="tertiary"></ion-icon>
+                
               </ion-item>
               <ion-row>
                 <ion-col class="display-flex">
