limpieza, nuevos estilos

--- a/src/app/components/animation-progress/animation-progress.component.html
+++ b/src/app/components/animation-progress/animation-progress.component.html
@@ -1,8 +1,7 @@
-<ion-row>
+<ion-row >
   <ion-col [size]="12" >
     <div>
-      <ion-list>
-        <ion-item>
+        <ion-item style="color: transparent !important;">
           <ion-thumbnail slot="start">
             <ion-skeleton-text animated></ion-skeleton-text>
           </ion-thumbnail>
@@ -22,7 +21,6 @@
             <ion-skeleton-text animated style="margin: 5px; width: 45%; height: 45%"></ion-skeleton-text>
           </ion-thumbnail>
         </ion-item>
-      </ion-list>
     </div>
   </ion-col>
 </ion-row>
