--- a/src/app/list-competencias/list-competencias.page.scss
+++ b/src/app/list-competencias/list-competencias.page.scss
@@ -13,6 +13,15 @@
   align-items: center;
   width: 100%;
 }
+.color-ion-checkbox {
+  border: 2px solid white;
+  border-radius: 16px;
+}
+
+.color-ion-checkbox-activa {
+  border: 2px solid var(--ion-color-primary);;
+  border-radius: 16px;
+}
 
 .text-header-table{
   padding: 5px;
